--- a/style.css
+++ b/style.css
@@ -4,10 +4,25 @@ body{
 }
 h1{
     font-size: 50px;
+   
+}
+#long{
+    border-left: 7px solid;
+}
+#orange{
+    color: orange;
+}
+#mission{
+    color:lightcoral;
+    text-align: center;
+    border: none;
+    border-radius: 5px;
+    padding: 10px 15px;
 }
 h2{
     font-size: 40px;
     color: royalblue;
+
 }
 .link-button{
     background-color: #052d25;
@@ -27,8 +42,101 @@ h2{
 .picture{
     width: 50%;
     padding-left: 1%;
+    border-right: 30px;
+    border-radius: 10px;
+   
 }
 .picture img{
-    width: 30%;
+    width: 40%;
 
+}
+.Mission-area{
+    background-repeat: no-repeat;
+    background-position: left;
+}
+.Mission-item{
+    width: 40%;
+    margin-left: 5%;
+    margin-right: 5%;
+    padding-left: 20px;
+    padding-right: 10px;
+    border-radius: 10px;
+    box-shadow: 10px 10px 40px gray;
+    background-color: lightslategray;
+    
+}
+#Mission-experience{
+    background-image: url(images/illustrator-1.png);
+    background-repeat: no-repeat;
+    margin-top: 15px;
+    font-size: 15px;
+    border-radius: 10px;
+    background-color: gray;
+}
+#vision-experience{
+    background-image: url(images/illustrator-2.png);
+    background-repeat: no-repeat;
+    margin-top: 15px;
+    font-size: 15px;
+    border-radius: 10px;
+    background-color:lightcoral;
+
+}
+#goal-experience{
+    background-image: url(images/illustrator-3.png);
+    background-repeat: no-repeat;
+    margin-top: 15px;
+    font-size: 15px;
+    border-radius: 10px;
+    background-color:powderblue;
+
+}
+.Dev-container{
+    display: flex;
+    margin-bottom: 100px;
+}
+.full-width{
+    width: 50%;
+    padding-left: 1%;
+     
+}
+.full-width img{
+    width: 80%;
+    padding-left: 10px;
+    background-image: url(images/shapes/shape-1.png);
+    background-repeat: no-repeat;
+    background-position:top;
+}
+
+
+.know-container{
+    display:flex;
+    margin-bottom: 100px;
+}
+.overall-width{
+    width: 50%;
+    padding-left: 1%;
+     
+}
+.overall-width img{
+    width: 80%;
+    padding-right: 10px;
+   background-image: url(images/shapes/shape-1.png);
+    background-repeat: no-repeat;
+    background-position:bottom;
+}
+
+
+.Hard-work{
+    text-align: center;
+    background-color: darkgoldenrod;
+
+}
+#color{
+    color: seagreen;
+
+}
+.work{
+    color: turquoise;
+    
 }
